src/assets/scss/custom.scss
/* ... */
.edit-logo-modal {
    overflow: visible !important;

    .popover-body {
        .card-body {
            padding: 0 !important;
        }

        .color-holder {
            box-shadow: none;
            border-top: 1px solid #ccc;
            border-radius: 0;
            padding-top: 10px;

            .color-container {
                padding: 0;
            }
        }
    }

    .modal-body {
        overflow-x: visible;
    }

    // logo editor modal width adjustment on mobile | Added By: Uzair
    .vm--modal {
        @media screen and (max-width: 1366px) and (min-width: 993px) {
            width: 80% !important;
            margin: 0 auto;
        }

        @media screen and (max-width: 992px) {
            width: 95% !important;
            margin: 0 auto;
        }
    }

    .edit-logo-modal{
        .fade-right{
            ul{
                flex-wrap: nowrap;
                li{
                    white-space: nowrap;
                }
            }
        }
    }
}

.vm--modal{
    max-width: 95% !important;
    right: auto !important;
    left: auto !important;
    margin-left: auto;
    margin-right: auto;
}
/* ... */

